// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./packages/engine/demo/basic.md correctly 1`] = `
<span>
  <div>
    <button
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  hello world
</span>
`;

exports[`renders ./packages/engine/demo/children.md correctly 1`] = `
<div>
  <div>
    <button
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  <span>
    <div>
      <button
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    hello
  </span>
  <span>
    <div>
      <button
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    world
  </span>
</div>
`;

exports[`renders ./packages/engine/demo/config-tree-array.md correctly 1`] = `
Array [
  <span>
    <div>
      <button
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    hello
  </span>,
  <span>
    <div>
      <button
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    world
  </span>,
  <div>
    <div>
      <button
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    <span>
      <div>
        <button
          data-testid="edit-btn"
        >
          edit
        </button>
      </div>
      hello
    </span>
    <span>
      <div>
        <button
          data-testid="edit-btn"
        >
          edit
        </button>
      </div>
      world
    </span>
  </div>,
]
`;

exports[`renders ./packages/engine/demo/custom-render.md correctly 1`] = `
<div>
  <div>
    <button
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  <span>
    foo
  </span>
  <span>
    <div>
      <button
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    bar
  </span>
</div>
`;

exports[`renders ./packages/engine/demo/supply.md correctly 1`] = `
<div>
  <div>
    <button
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  <div>
    <div>
      <button
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    <span>
      <div>
        <button
          data-testid="edit-btn"
        >
          edit
        </button>
      </div>
      foo
    </span>
  </div>
</div>
`;

exports[`renders ./packages/engine/demo/supply-from-data.md correctly 1`] = `
<div>
  <div>
    <button
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  <div>
    <div>
      <button
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    <span>
      <div>
        <button
          data-testid="edit-btn"
        >
          edit
        </button>
      </div>
      bar
    </span>
  </div>
</div>
`;

exports[`renders ./packages/engine/demo/supply-with-id.md correctly 1`] = `
<div>
  <div>
    <button
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  <div>
    <div>
      <button
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    <span>
      <div>
        <button
          data-testid="edit-btn"
        >
          edit
        </button>
      </div>
      foo
    </span>
  </div>
</div>
`;

exports[`renders ./packages/engine/demo/supply-without-id.md correctly 1`] = `
<div>
  <div>
    <button
      data-testid="edit-btn"
    >
      edit
    </button>
  </div>
  <div>
    <div>
      <button
        data-testid="edit-btn"
      >
        edit
      </button>
    </div>
    <span>
      <div>
        <button
          data-testid="edit-btn"
        >
          edit
        </button>
      </div>
      baz
    </span>
  </div>
</div>
`;
